--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,21 @@
 <header>
-	<div class="menu">
-		<a routerLink="./home">Home</a>
-		<a routerLink="./catalog">Catalog</a>
-		<a href="#">News</a>
-		<a href="#">Profile</a>
+	<div class="container">
+		<div class="menu">
+			<a routerLink="./home">Home</a>
+			<a routerLink="./catalog">Catalog</a>
+			<a href="#">News</a>
+			<a href="#">Profile</a>
+		</div>
+		<div class="profile">
+			<div *ngIf="(user$ | async) as user; else login" class="user">
+				<span>{{user.name}}</span>
+				<img [src]="user.icon" alt="">
+				<button mat-button color="primary" (click)="logOut()">Log Out</button>
+			</div>
+			<ng-template #login>
+				<a routerLink="./login">Login</a>
+			</ng-template>
+		</div>
 	</div>
 </header>
 
